--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="main">
         <div class="header">
             <img class="logo" src="./assets/pic-2.jpg" alt="picture">
-        <h1>نیازی فش سروس</h1>
+        <h1 class="a">نیازی فش سروس</h1>
         </div>
         <p class="p1">کسی بھی قسم کی تازہ مچھلی خریدنےکے لیے ہم سے رابطہ کریں۔ آپ ایک کلو گرام، 2 کلوگرام یا اس سے زیادہ کا آرڈر دے سکتے ہیں۔
             ہم اپنے معزز صارفین کے لیے بازار سے کم نرخوں پر تازہ مچھلی کی ہوم ڈیلیوری سروس فراہم کرتے ہیں۔</p>
